src/objects/invoices__x.object
<CustomObject>
    <description>invoices</description>
    <externalDataSource>BillingService</externalDataSource>
    <externalName>invoices</externalName>
    <fields>
        <fullName>billAmount__c</fullName>
        <description>billAmount</description>
        <externalDeveloperName>billAmount</externalDeveloperName>
        <label>Bill Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billDate__c</fullName>
        <description>billDate</description>
        <externalDeveloperName>billDate</externalDeveloperName>
        <label>Bill Date</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceId__c</fullName>
        <description>invoiceId</description>
        <externalDeveloperName>invoiceId</externalDeveloperName>
        <label>invoiceId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectRef__c</fullName>
        <label>External ID</label>
        <length>200</length>
        <referenceTargetField>Project__c.ProjectRef__c</referenceTargetField>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>invoices</relationshipLabel>
        <relationshipName>invoices</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <label>invoices</label>
    <pluralLabel>invoices</pluralLabel>
</CustomObject>